test/fail/vt_10.v3
//@execute (0,0)=15; (0,1)=9; (0,2)=9; (0,3)=9; (1,1)=15; (1,2)=9; (1,3)=9; (2,2)=15; (2,3)=9; (3,3)=15
type vt_10 {
	case X(a: int, b: int, c: int, d: int);
}
def compare(x: vt_10, y: vt_10) -> int {
	return
		if(x == x, 0b0001) |
		if(x == y, 0b0010) |
		if(y == x, 0b0100) |
		if(y == y, 0b1000);
}
def T = 145;
def F = 146;
def xx = [vt_10.X(T, F, F, F), vt_10.X(F, T, F, F), vt_10.X(F, F, T, F), vt_10.X(F, F, F, T)];
def main(a: int, b: int) -> int {
	return compare(xx(a), xx(b));
}
